# helix

./: .gitignore  CMakeLists.txt  README.md
cmake/: coverage.cmake  dependencies.cmake  setup.cmake
helix/: CMakeLists.txt  array2d.cpp  array2d.h  array2d_test.cpp  defs.h  elements.cpp  elements.h  geometry.cpp  geometry.h  geometry_test.cpp  helix.cpp  io.cpp  io.h  library.cpp  library.h  library_test.cpp  log.cpp  log.h  mesh.cpp  mesh.h  mesher.cpp  mesher.h  mesher_test.cpp  util.cpp  util.h
